first initial working link for ptp and joining back and drawing the edge, also making use of old core icons to provide a basic look and feel, updated coloring to dark mode instead of info, seems to fit better

--- a/webapp/static/core.css
+++ b/webapp/static/core.css
@@ -3,8 +3,7 @@
 }
 
 .navbar-text {
-    color: #17a2b8 !important;
-    background-color: #fff;
+    color: #fff !important;
     font-weight: bold;
 }
 
