--- a/webapp/static/core.css
+++ b/webapp/static/core.css
@@ -2,6 +2,10 @@
     height: 100vh;
 }
 
+#info-card-table td {
+    font-size: 12px;
+}
+
 .navbar-text {
     color: #fff !important;
     font-weight: bold;
