--- a/webapp/static/core.css
+++ b/webapp/static/core.css
@@ -6,6 +6,11 @@
     font-size: 12px;
 }
 
+#node-select {
+    width: 40px;
+    height: 40px;
+}
+
 .navbar-text {
     color: #fff !important;
     font-weight: bold;
