--- a/webapp/static/core.css
+++ b/webapp/static/core.css
@@ -4,11 +4,16 @@
 
 #info-card-table td {
     font-size: 12px;
+    padding: .5rem;
 }
 
 #node-select {
     width: 40px;
     height: 40px;
+}
+
+#sessions-modal td {
+    cursor: pointer;
 }
 
 .navbar-text {
