--- a/webapp/templates/linkedit_modal.html
+++ b/webapp/templates/linkedit_modal.html
@@ -1,26 +1,17 @@
-<div id="sessions-modal" class="modal" tabindex="-1" role="dialog">
+<div id="linkedit-modal" class="modal" tabindex="-1" role="dialog">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header bg-dark text-white">
-                <h5 class="modal-title">Sessions</h5>
+                <h5 class="modal-title"></h5>
                 <button type="button" class="close text-white" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <table id="sessions-table" class="table table-hover">
-                    <thead>
-                    <tr>
-                        <th scope="col">ID</th>
-                        <th scope="col">Nodes</th>
-                        <th scope="col">State</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    </tbody>
-                </table>
+                <p>edit stuff goes here</p>
             </div>
             <div class="modal-footer">
+                <button id="linkedit-button" type="button" class="btn btn-primary">Edit</button>
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             </div>
         </div>
