--- a/webapp/templates/nodeedit_modal.html
+++ b/webapp/templates/nodeedit_modal.html
@@ -1,26 +1,23 @@
-<div id="sessions-modal" class="modal" tabindex="-1" role="dialog">
+<div id="nodeedit-modal" class="modal" tabindex="-1" role="dialog">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header bg-dark text-white">
-                <h5 class="modal-title">Sessions</h5>
+                <h5 class="modal-title"></h5>
                 <button type="button" class="close text-white" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <table id="sessions-table" class="table table-hover">
-                    <thead>
-                    <tr>
-                        <th scope="col">ID</th>
-                        <th scope="col">Nodes</th>
-                        <th scope="col">State</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    </tbody>
-                </table>
+                <form>
+                    <div class="form-group">
+                        <label for="node-name">Name</label>
+                        <input id="node-name" name="name" class="form-control" type="text" placeholder="Node Name"
+                               required>
+                    </div>
+                </form>
             </div>
             <div class="modal-footer">
+                <button id="nodeedit-button" type="button" class="btn btn-primary">Edit</button>
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             </div>
         </div>
